[tool.poetry]
name = "aw-importer-lifecycle"
version = "0.0.1"
description = "Lifecycle importer for ActivityWatch"
authors = ["Zach Strout <zachstrout@gmail.com>"]
license = "MPL-2.0"
repository = "https://github.com/RTnhN/aw-importer-lifecycle"

[tool.poetry.scripts]
aw-importer-lifecycle = "aw_importer_lifecycle:main"

[tool.poetry.dependencies]
python = "^3.7"
aw-client = "^0.5.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
